<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCIntlm</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="blank"></string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Domain">Domain</string>
    <string name="Server">Server</string>
    <string name="InputPort">Input Port</string>
    <string name="OutputPort">Output Port</string>
    <string name="domainHint">uci.cu</string>
    <string name="serverHint">10.0.0.1</string>
    <string name="portHint">8080</string>
    <string name="run">run</string>
    <string name="stop">stop</string>
    <string name="notif1">UCIntlm is running...</string>
    <string name="notif2">Running UCIntlm for user</string>
    <string name="encriptPass">UCIntlm+WIDGET-YCpV5fGzmo0ruVRwVfAD}1vjAJF</string>

</resources>